--- a/IndustrialServices/Views/Artikel/Draft.cshtml
+++ b/IndustrialServices/Views/Artikel/Draft.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
-    ViewData["Title"] = "Edit Article";
+    ViewData["Title"] = "Draft Article";
 }
 
 <div class="pagetitle">
-    <h1>- Detail Article -</h1>
+    <h1>- Draft Article -</h1>
 </div>
 <br />
 
@@ -46,12 +46,13 @@
                                 <input class="form-control" type="file" name="sampul_artikel" id="sampul_artikel">
                             </div>
                         </div>
-                        <div class="row mb-3">
-                            <label for="isi_artikel" class="col-sm-2 col-form-label">Article Content</label>
-                            <div class="col-sm-10">
-                                <textarea class="form-control" name="isi_artikel" id="isi_artikel" rows="10"></textarea>
-                            </div>
+                    <div class="row mb-3">
+                        <label for="isi_artikel" class="col-sm-2 col-form-label">Article Content</label>
+                        <div class="col-sm-10">
+                            <textarea class="form-control" name="isi_artikel" id="summernote" rows="10"></textarea>
                         </div>
+                    </div>
+
                         <div class="row mb-3">
                             <div class="col-sm-10">
                                 <input class="form-control" id="status" name="status" value="1" hidden />
@@ -61,18 +62,23 @@
                         <br />
                         <div class="row mb-3">
                             <div class="col-sm-10">
-                                <button type="button" class="btn btn-danger" onclick="cancelEdit()">Cancel</button>
+                            <a class="btn btn-secondary" asp-action="Index" asp-controller="Artikel">Back</a>
                                 <button type="submit" class="btn btn-primary" onclick="simpanEdit()">Submit</button>
                             </div>
                         </div>
-                    <a class="btn btn-secondary" asp-action="Index" asp-controller="Artikel">Back</a>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#summernote').summernote();
+    });
+</script>
 <script>
     loadArticleData();
 
@@ -81,7 +87,7 @@
         var id_pengelola = document.getElementById("id_pengelola");
         var judul_artikel = document.getElementById("judul_artikel");
         var sampul_artikel = document.getElementById("sampul_artikel");
-        var isi_artikel = document.getElementById("isi_artikel");
+        var isi_artikel = document.getElementsByName("isi_artikel")[0];
         var status = document.getElementById("status");
 
         var hostname = "https://localhost:7033/";
@@ -96,7 +102,7 @@
                 var article = data.data;
                 id_pengelola.value = article.id_pengelola;
                 judul_artikel.value = article.judul_artikel;
-                isi_artikel.value = article.isi_artikel;
+                isi_artikel.innerHTML = article.isi_artikel;
                 status.value = article.status;
 
                 // Tampilkan pratinjau gambar sampul artikel jika ada
@@ -114,7 +120,7 @@
         var id_pengelola = document.getElementById("id_pengelola").value;
         var tanggal_rilis = document.getElementById("tanggal_rilis").value;
         var judul_artikel = document.getElementById("judul_artikel").value;
-        var isi_artikel = document.getElementById("isi_artikel").value;
+        var isi_artikel = document.getElementsByName("isi_artikel")[0].value;
         var sampul_artikel = document.getElementById("sampul_artikel").value;
         var status = document.getElementById("status").value;
         var tanggal_rilis = document.getElementById("tanggal_rilis").value;
