--- a/IndustrialServices/Views/Shared/_LayoutAdmin.cshtml
+++ b/IndustrialServices/Views/Shared/_LayoutAdmin.cshtml
@@ -46,6 +46,16 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- TinyMCE -->
+    <!-- include summernote css/js -->
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#summernote').summernote();
+        });
+    </script>
+    </script>
       </head>
 <body>
         <header id="header" class="header fixed-top d-flex align-items-center">
