--- a/IndustrialServices/Views/DashboardCRUD/Index.cshtml
+++ b/IndustrialServices/Views/DashboardCRUD/Index.cshtml
@@ -10,7 +10,7 @@
             <div class="container-md" style="padding:60px;background-color:lightgray">
                 <div class="container-fluid">
                     <h1 style="padding-bottom:10px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Welcome to Industrial Services Website Management Data Side!</h1>
-                    <p class="lead">This is the home page of Industrial Services Management Data Side, please access the menu available on the menu bar on the left side of the page.</p>
+        <p class="lead">This is the home page of the Industrial Services Management Data Side. Please access the menu available on the menu bar on the left side of the page.</p>
                 </div>
             </div>
 
