--- a/IndustrialServices/Views/PengelolaWeb/Index.cshtml
+++ b/IndustrialServices/Views/PengelolaWeb/Index.cshtml
@@ -247,7 +247,7 @@
         $.ajax({
             url: url,
             method: method,
-            data: JSON.stringify(data),
+            data: data,
             contentType: "application/json",
             success: function (data) {
                 console.log(data.messages);
