--- a/IndustrialServices/Views/TipeFasilitas/Index.cshtml
+++ b/IndustrialServices/Views/TipeFasilitas/Index.cshtml
@@ -189,8 +189,17 @@
             data: data,
             contentType: "application/json",
             success: function (data) {
-                // Tangani respons sukses, jika diperlukan
-                window.location.href = '/TipeFasilitas/Index'; // Redirect ke halaman TipeFasilitas Index
+                if (data.status === 500) {
+                    // Tampilkan SweetAlert jika NPK sudah digunakan
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Warning!',
+                        text: 'Type of Facility was already used!',
+                    });
+                } else {
+                    $('#addTipeFasilitasModal').modal('hide'); // Hide the modal
+                    location.reload(); // Reload the page or update the data
+                }
             },
             error: function (xhr, status, error) {
                 console.error("Error updating type of facility:", error);
@@ -225,9 +234,17 @@
             data: data,
             contentType: "application/json",
             success: function (data) {
-                // Handle the success response, if needed
+                if (data.status === 500) {
+                    // Tampilkan SweetAlert jika NPK sudah digunakan
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Warning!',
+                        text: 'Type of Facility was already used!',
+                    });
+                } else {
                 $('#addTipeFasilitasModal').modal('hide'); // Hide the modal
                 location.reload(); // Reload the page or update the data
+                }
             },
             error: function (xhr, status, error) {
                 console.error("Error saving type of facility:", error);
@@ -244,7 +261,7 @@
     <div class="modal-dialog modal-dialog-centered modal-xl">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title" style="font-size: 28px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Add Tipe Fasilitas</h1>
+                <h1 class="modal-title" style="font-size: 28px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Add Type of Facility</h1>
             </div>
             <div class="modal-body">
                 <section class="section">
@@ -257,7 +274,7 @@
 
                                 <!-- General Form Elements -->
                                 <div class="row mb-3">
-                                    <label for="tipe_fasilitas" class="col-sm-2 col-form-label">Tipe Fasilitas</label>
+                                    <label for="tipe_fasilitas" class="col-sm-2 col-form-label">Type of Facility</label>
                                     <div class="col-sm-10">
                                         <input type="text" class="form-control" name="tipe_fasilitas" id="tipe_fasilitas">
                                     </div>
@@ -289,7 +306,7 @@
     <div class="modal-dialog modal-dialog-centered modal-xl">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title" style="font-size: 28px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Edit Tipe Fasilitas</h1>
+                <h1 class="modal-title" style="font-size: 28px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Edit Type of Facility</h1>
             </div>
             <div class="modal-body">
                 <section class="section">
@@ -302,7 +319,7 @@
 
                                 <!-- General Form Elements -->
                                 <div class="row mb-3">
-                                    <label for="edit_tipe_fasilitas" class="col-sm-2 col-form-label">Tipe Fasilitas</label>
+                                    <label for="edit_tipe_fasilitas" class="col-sm-2 col-form-label">Type of Facility</label>
                                     <div class="col-sm-10">
                                         <input type="text" class="form-control" name="edit_tipe_fasilitas" id="edit_tipe_fasilitas">
                                     </div>
