--- a/IndustrialServices/Views/TipeProduk/Index.cshtml
+++ b/IndustrialServices/Views/TipeProduk/Index.cshtml
@@ -189,8 +189,17 @@
             data: data,
             contentType: "application/json",
             success: function (data) {
-                // Handle the success response, if needed
-                window.location.href = '/TipeProduk/Index'; // Redirect to TipeProduk Index page
+                if (data.status === 500) {
+                    // Tampilkan SweetAlert jika NPK sudah digunakan
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Warning!',
+                        text: 'Type of Training was already used!',
+                    });
+                } else {
+                    $('#editTipeProdukModal').modal('hide'); // Hide the modal
+                    location.reload(); // Reload the page or update the data
+                }
             },
             error: function (xhr, status, error) {
                 console.error("Error updating type of product:", error);
@@ -225,9 +234,17 @@
             data: data,
             contentType: "application/json",
             success: function (data) {
-                // Handle the success response, if needed
+                if (data.status === 500) {
+                    // Tampilkan SweetAlert jika NPK sudah digunakan
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Warning!',
+                        text: 'Type of Training was already used!',
+                    });
+                } else {
                 $('#addTipeProdukModal').modal('hide'); // Hide the modal
                 location.reload(); // Reload the page or update the data
+                }
             },
             error: function (xhr, status, error) {
                 console.error("Error saving type of product:", error);
@@ -247,7 +264,7 @@
     <div class="modal-dialog modal-dialog-centered modal-xl">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title" style="font-size: 28px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Add Tipe Produk</h1>
+                <h1 class="modal-title" style="font-size: 28px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Add Type of Product</h1>
             </div>
             <div class="modal-body">
                 <section class="section">
@@ -261,7 +278,7 @@
 
                                 <!-- General Form Elements -->
                                 <div class="row mb-3">
-                                    <label for="tipe_produk" class="col-sm-2 col-form-label">Tipe Produk</label>
+                                    <label for="tipe_produk" class="col-sm-2 col-form-label">Type of Product</label>
                                     <div class="col-sm-10">
                                         <input type="text" class="form-control" name="tipe_produk" id="tipe_produk">
                                     </div>
@@ -293,7 +310,7 @@
     <div class="modal-dialog modal-dialog-centered modal-xl">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title" style="font-size: 28px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Edit Tipe Produk</h1>
+                <h1 class="modal-title" style="font-size: 28px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Edit Type of Product</h1>
             </div>
             <div class="modal-body">
                 <section class="section">
@@ -307,7 +324,7 @@
 
                                 <!-- General Form Elements -->
                                 <div class="row mb-3">
-                                    <label for="edit_tipe_produk" class="col-sm-2 col-form-label">Tipe Produk</label>
+                                    <label for="edit_tipe_produk" class="col-sm-2 col-form-label">Type of Product</label>
                                     <div class="col-sm-10">
                                         <input type="text" class="form-control" name="edit_tipe_produk" id="edit_tipe_produk">
                                     </div>
